feat(user): delete user by id
